chore: replace `Arrays.asList` by `List.of`